tests/parser/tests/cases/should_pass/tuple_types/case.hash
// This should be the same
let k: () = b;
let k: (,) = b;

// Different sizes
let k: (int) = b;
let k: (int, float) = b;
let k: (int, float,) = b;
let k: (int, float, int) = b;
