tests/parser/tests/cases/should_fail/destructure_onto_void/case.hash
// This doesn't make much sense semantically either.
let (,) = k;
